fix nav overflow #3

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1770,7 +1770,6 @@ input, select, textarea {
 /* Nav */
 
 	#nav {
-		overflow-x: auto;
 		text-align: center;
 		height: 4.25em;
 		cursor: default;
@@ -1780,7 +1779,7 @@ input, select, textarea {
 			position: relative;
 			display: inline-block;
 			color: #ffffff;
-			width: 1em;
+			width: 0.75em;
 			height: 1em;
 			line-height: 0.9em;
 			font-size: 2.5em;
